# meta

./: config.toml
src/embeddings/: CMakeLists.txt
src/embeddings/tools/: CMakeLists.txt  distance.cpp  skipgram.cpp  word2vec.cpp
